[package]
name = "eradicate"
version = "0.1.5"
authors = ["Max Erdelmeier <max.erdelmeier@graukolos.tech>"]
edition = "2021"
description = "A cli utility to remove hosts from your known_hosts file"
readme = "README.md"
repository = "https://github.com/graukolos/eradicate"
license = "GPL-3.0"
keywords = ["cli", "ssh"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colorful = "0.3.2"

[profile.release]
lto = true
